--- a/app/src/main/res/layout/activity_view_user_profile.xml
+++ b/app/src/main/res/layout/activity_view_user_profile.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -98,18 +97,18 @@
         android:id="@+id/text_EditUserdata"
         android:layout_width="@dimen/sixty"
         android:layout_height="@dimen/sixty"
+        android:layout_below="@+id/user"
+        android:layout_alignParentRight="true"
         android:layout_marginTop="-30dp"
+        android:layout_marginRight="@dimen/ten"
+        android:background="@drawable/textcountshape"
+        android:drawableLeft="@drawable/vector_editor"
+        android:elevation="@dimen/fifty"
+        android:gravity="center"
+        android:paddingLeft="@dimen/twenty"
         android:textColor="#000000"
         android:textSize="@dimen/textsize"
-        android:drawableLeft="@drawable/vector_editor"
-        android:paddingLeft="@dimen/twenty"
-        android:textStyle="bold"
-        android:gravity="center"
-        android:elevation="@dimen/fifty"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="@dimen/ten"
-        android:layout_below="@+id/user"
-        android:background="@drawable/textcountshape"/>
+        android:textStyle="bold" />
 
     <RelativeLayout
         android:id="@+id/details"
